--- a/index-minecraft.html
+++ b/index-minecraft.html
@@ -15,6 +15,7 @@
     <body>
         <h1>Welcome!</h1>
         <h3>Choose a link:</h3>
+        <h4>Why are the links not working? This website is a work-in-progress and some of the .jars are still in development. Some of the links don't exist yet, so there is no permanat link.</h4>
         <ul>
             <li>Plugins
                 <ul>
