Fix some requirements
Add all the meta tags
Change where the icon points to

--- a/Indexes/index-deltafour.html
+++ b/Indexes/index-deltafour.html
@@ -6,7 +6,7 @@
         <meta name="keywords" content="DeltaFour, YouTube">
         <meta name="author" content="Joshua Merrill">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="https://cdn.rawgit.com/GreyballDevelopment/Website/master/Greyball%201568x1568.ico" type="image/x-icon"/>
+        <link rel="icon" href="https://cdn.rawgit.com/GreyballDevelopment/Website/master/Icons/Greyball%20logo.ico" type="image/x-icon"/>
         <link rel="stylesheet" href="https://cdn.rawgit.com/GreyballDevelopment/Website/master/main.css" type='text/css'/>
         <title>DeltaFour@Greyball</title>
     </head>
