--- a/Indexes/index-hcg.html
+++ b/Indexes/index-hcg.html
@@ -3,8 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Halo Card Game</title>
-                <link rel="icon" href="https://cdn.rawgit.com/GreyballDevelopment/Website/master/Greyball%201568x1568.ico" type="image/x-icon">
+                <link rel="icon" href="https://cdn.rawgit.com/GreyballDevelopment/Website/master/Icons/Greyball%20logo.ico" type="image/x-icon">
                 <link rel="stylesheet" href="https://cdn.rawgit.com/GreyballDevelopment/Website/master/main.css" type='text/css'>
+    <meta name="description" content="Halo card game">
+        <meta name="keywords" content="Halo, Halo Card Game">
+        <meta name="author" content="Joshua Merrill, Jacob Merrill">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<h1>HaloCardGame</h1>
