--- a/Indexes/basicSurvival.minecraft.index.html
+++ b/Indexes/basicSurvival.minecraft.index.html
@@ -2,10 +2,12 @@
 <html lang='en-us'>
   <head>
     <meta charset='utf-8'/>
-    <meta name='description' value='Basic Survival Guide for Minecraft'/>
-    <meta name='Author' value='Joshua Merrill, Jacob Merrill'/>
+    <meta name="description" content="Basic survival tips for Minecraft">
+    <meta name="keywords" content="Minecraft, Minecraft Survival">
+    <meta name="author" content="Joshua Merrill, Jacob Merrill">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic Survival | Minecraft@Grayball</title>
-    <link rel="icon" href="https://cdn.rawgit.com/GreyballDevelopment/Website/master/Greyball%201568x1568.ico" type="image/x-icon">
+    <link rel="icon" href="https://cdn.rawgit.com/GreyballDevelopment/Website/master/Icons/Greyball%20logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.rawgit.com/GreyballDevelopment/Website/master/main.css" type='text/css'>
   </head>
   <body>
