--- a/Indexes/index-minecraft.html
+++ b/Indexes/index-minecraft.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="icon" href="https://cdn.rawgit.com/GreyballDevelopment/Website/master/Icons/Greyball%20logo.ico" type="image/x-icon">
+        <link rel="stylesheet" href="https://cdn.rawgit.com/GreyballDevelopment/Website/master/main.css" type='text/css'>
+        <meta name="description" content="Minecraft Guide">
+        <meta name="keywords" content="Minecraft, Minceraft">
+        <meta name="author" content="Joshua Merrill, Jacob Merrill">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Minecraft | Nebula Development</title>
         <style>
             li ul{
