--- a/Indexes/index-alpha1.html
+++ b/Indexes/index-alpha1.html
@@ -11,5 +11,6 @@
   </head>
   <body>
     <p>Welcome to the Alpha1 Pokémon League! There is not much here yet.</p>
+    <p>We currently only have one location: the Selah Library.</p>
   </body>
 </html>
