--- a/alpha1.greyball.tk/index.html
+++ b/alpha1.greyball.tk/index.html
@@ -2,7 +2,7 @@
 <html lang='en-us'>
   <head>
     <meta charset='utf-8'/>
-    <link rel="icon" href="https://cdn.rawgit.com/GreyballDevelopment/Website/master/Icons/Greyball%20logo.ico" type="image/x-icon"/>
+    <link rel="icon" href="https://cdn.rawgit.com/GreyballDevelopment/Website/master/Icons/Greyball.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="https://cdn.rawgit.com/GreyballDevelopment/Website/master/Styles/main.css" type='text/css'/>
     <meta name="description" content="Minecraft Guide"/>
     <meta name="keywords" content="Pokemon League, Pokemon, Yakima, Selah, Yakima Valley"/>
@@ -11,6 +11,5 @@
   </head>
   <body>
     <p>Welcome to the Alpha1 Pokémon League! There is not much here yet.</p>
-    <p>We currently only have one location: the Selah Library.</p>
   </body>
 </html>
