--- a/greyball.tk/haloCardGame/index.html
+++ b/greyball.tk/haloCardGame/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Halo Card Game</title>
-                <link rel="icon" href="https://cdn.rawgit.com/GreyballDevelopment/Website/master/Icons/Greyball%20logo.ico" type="image/x-icon">
+                <link rel="icon" href="https://cdn.rawgit.com/GreyballDevelopment/Website/master/Icons/Greyball.ico" type="image/x-icon">
                 <link rel="stylesheet" href="https://cdn.rawgit.com/GreyballDevelopment/Website/master/Styles/main.css" type='text/css'>
     <meta name="description" content="Halo card game">
         <meta name="keywords" content="Halo, Halo Card Game">
