--- a/minecraft.antisine.tk/basicSurvival/index.html
+++ b/minecraft.antisine.tk/basicSurvival/index.html
@@ -7,8 +7,8 @@
     <meta name="author" content="Joshua Merrill, Jacob Merrill">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic Survival | Minecraft@Grayball</title>
-    <link rel="icon" href="https://cdn.rawgit.com/GreyballDevelopment/Website/master/Icons/Greyball.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdn.rawgit.com/GreyballDevelopment/Website/master/Styles/main.css" type='text/css'>
+    <link rel="icon" href="https://cdn.rawgit.com/Antisine/Website/master/Icons/Antisine.ico" type="image/x-icon"/>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/Antisine/Website/master/Styles/main.css" type='text/css'/>
   </head>
   <body>
     <p>There are many aspects of survival in Minecraft:</p>
