Do some renaming
Renamed a bunch of files

--- a/deltafour.cobalts.tk/index.html
+++ b/deltafour.cobalts.tk/index.html
@@ -6,12 +6,12 @@
         <meta name="keywords" content="DeltaFour, YouTube">
         <meta name="author" content="Joshua Merrill">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="https://cdn.rawgit.com/GreyballDevelopment/Website/master/Icons/Greyball.ico" type="image/x-icon"/>
-        <link rel="stylesheet" href="https://cdn.rawgit.com/GreyballDevelopment/Website/master/Styles/main.css" type='text/css'/>
-        <title>DeltaFour@Greyball</title>
+        <link rel="icon" href="https://cdn.rawgit.com/CobaltsDev/Website/master/Icons/Cobalts.ico" type="image/x-icon"/>
+        <link rel="stylesheet" href="https://cdn.rawgit.com/CobaltsDev/Website/master/Styles/main.css" type='text/css'/>
+        <title>DeltaFour@Cobalts</title>
     </head>
     <body>
         <p>Welcome to DeltaFour's website!</p>
-        <a href='http://greyball.tk'>Go to Greyball</a>
+        <a href='http://cobalts.tk'>Go to Cobalts</a>
     </body>
 </html>
