--- a/minecraft.cobalts.tk/index.html
+++ b/minecraft.cobalts.tk/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="icon" href="https://cdn.rawgit.com/GreyballDevelopment/Website/master/Icons/Greyball.ico" type="image/x-icon">
-        <link rel="stylesheet" href="https://cdn.rawgit.com/GreyballDevelopment/Website/master/Styles/main.css" type='text/css'>
+        <link rel="icon" href="https://cdn.rawgit.com/CobaltsDev/Website/master/Icons/Cobalts.ico" type="image/x-icon">
+        <link rel="stylesheet" href="https://cdn.rawgit.com/CobaltsDev/Website/master/Styles/main.css" type='text/css'>
         <meta name="description" content="Minecraft Guide">
         <meta name="keywords" content="Minecraft, Minceraft">
         <meta name="author" content="Joshua Merrill, Jacob Merrill">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Minecraft | Nebula Development</title>
+        <title>Minecraft | Cobalts</title>
         <style>
             li ul{
                 display:none;
