--- a/randomname.cobalts.tk/index.html
+++ b/randomname.cobalts.tk/index.html
@@ -39,12 +39,15 @@
             font-family: "Open Sans";
             font-size: 20px;
         }
+		#code{
+			font-size: 10px;
+		}
     </style>
     <body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <button id="NameGenerate" onclick="myFunction()"><i class="material-icons">person_add</i></button>
         <div id="output"><p><br></p></div>
-        <span><i class="material-icons">code</i>License: <a href = "http://www.gnu.org/licenses/gpl-3.0.txt" rel="license">GNU GPL v3.0</a></span>
+        <span><i class="material-icons" id="code">code</i>License: <a href = "http://www.gnu.org/licenses/gpl-3.0.txt" rel="license">GNU GPL v3.0</a></span>
         <p>This website is Material Design compliant. <a href="material.io">Learn More.</a></p>
         <script>
             var names = ["Jazmine", "Kamora", "Yandell", "Aaliyah", "Belen", "Ruby", "Alex", "Anthony", "Jose", "Marissa", "Sidney", "La\'Darius", "Mariah", "Damian", "Juan", "Santiago", "Joseph", "Nicolas", "Octavio", "Whitney", "Leslie", "Brayden", "Paulina", "Aaleayh", "Alison", "Eddy", "Victor", "Jeremy"];
