--- a/randomname.cobalts.tk/index.html
+++ b/randomname.cobalts.tk/index.html
@@ -21,9 +21,11 @@
             font-size: 25px;
             color: white;
             background-color: #6464ff;
-            border-radius: 5px;
+            border-radius: 25px;
             border: none;
             box-shadow: 2px 2px 5px #888888;
+		    width: 50px;
+            height: 50px;
         }
         button:hover{
             box-shadow: 1px 1px 3px #888888;
